--- a/EVA.styles.css
+++ b/EVA.styles.css
@@ -1,8 +1,14 @@
-/* YOUR NAME GOES HERE */
+/* Eva, Johnathon */
 
 /* --------------- ADD CSS RESET TO THE FILE HERE --------------- */
 
+*, *::before, *::after { box-sizing: border-box; }
+html, body, h1, h2, h3, h4, p, figure {margin: 0; padding: 0 }
+body { min-height: 100dvh; text-rendering: optimizeLegibility; -webkit-font-smoothing: antialiased; }
+img, picture { max-width: 100% display: block; }
+button, input, select textarea { font: inherit; }
 
+/* -- /Reset-- */
 
 /* ----- AUTOPREFIXER FOR VS CODE WAS USED FOR VENDOR PREFIXES ----- */
 /* ---------- VARIABLES ---------- */
@@ -31,8 +37,9 @@
 
 /* ----- CHECK FOR USER DARK MODE PREFERENCE ----- */
 /* --------------- BEGIN USER PREFERS DARK COLOR SCHEME QUERY --------------- */
-
-/* CHANGE THE BODY'S BACKGROUND COLOR TO THE DARK GRAY IF THE USER PREFERS DARK MODE */
+@media (prefers-color-scheme: dark) {
+    body { background-color: var(--dark-gray); }
+}
 
 /* --------------- END USER PREFERS DARK COLOR SCHEME QUERY --------------- */
 
@@ -91,6 +98,14 @@ footer .icon{
 
 /* ----- HANDLE PREFERS REDUCED MOTION FOR THE ICON ANIMATIONS ----- */
 /* --------------- BEGIN USER PREFERS REDUCED MOTION QUERY --------------- */
+@media (prefers-reduced-motion: reduce) {
+    .icon {
+        -webkit-animation: none !important;
+                animation: none !important;
+    }
+}
+
+
     @-webkit-keyframes icon-animation {
         0% { font-variation-settings: "TIME" 1; }
     }
@@ -150,7 +165,8 @@ img{
 
 /* ---------- SMALL SCREEN STYLES ---------- */
 /* --------------- BEGIN SMALL SCREEN SIZES --------------- */
-    /* header, footer{
+    @media (mind-width: 480px){
+        header, footer{
         background-color: var(--lime-green);
         color: var(--dark-gray);
     }
@@ -176,13 +192,15 @@ img{
         width: 200px;
         max-width: 200px;
     } */
+    }
 /* --------------- END SMALL SCREEN SIZES --------------- */
 
 
 
 /* ---------- MEDIUM SCREEN STYLES ---------- */
 /* --------------- BEGIN MEDIUM SCREEN SIZES --------------- */
-    /* header, footer{
+    @media (min-width: 768px){
+        header, footer{
         background-color: var(--black);
         color: var(--white);
     }   
@@ -208,13 +226,15 @@ img{
         grid-column: 3/4;
         grid-row: 3/5;
     } */
+    }
 /* --------------- END MEDIUM SCREEN SIZES --------------- */
 
 
 
 /* ---------- LARGE SCREEN STYLES ---------- */
 /* --------------- BEGIN LARGE SCREEN SIZES --------------- */
-    /* header, footer{
+    @media (min-width: 1024px){
+        header, footer{
         background-color: var(--lime-green);
         color: var(--dark-gray);
     }
@@ -245,24 +265,26 @@ img{
 
     #seven, #eight{
         grid-row: 3/4;
-    } */
+    } 
+    }
 /* --------------- END LARGE SCREEN SIZES --------------- */
 
 
 
 /* ---------- ADJUSTING RESPONSIVE IMAGE SIZE ---------- */
 /* --------------- BEGIN RESPONSIVE IMAGE ADJUST SIZES --------------- */
-    /* img{
+    img{
         width: 300px;
         max-width: 300px;
-    } */
+    } 
 /* --------------- END RESPONSIVE IMAGE ADJUST SIZES --------------- */
 
 
 
 /* ---------- EXTRA LARGE SCREEN STYLES ---------- */
 /* --------------- BEGIN EXTRA LARGE SCREEN SIZES --------------- */
-    /* header, footer{
+    @media (min-width: 1440px){
+        header, footer{
         background-color: var(--orange);
         padding-left: 5%;
     }
@@ -327,5 +349,17 @@ img{
 
     #three p, #four p, #five p, #six p{
         padding-top: 2em;
-    } */
+    } 
+    }
 /* --------------- END EXTRA LARGE SCREEN SIZES --------------- */
+
+/*exempting those favicons */
+
+img[src$="favicon-L.png"],
+img[src$="favicon-S.png"]{
+  width: auto;
+  max-width: 48px;
+  float: none;
+  display: inline-block;
+  vertical-align: middle;
+}
