--- a/EVA.styles.css
+++ b/EVA.styles.css
@@ -33,6 +33,11 @@ button, input, select textarea { font: inherit; }
     line-height: 1.35;
 }
 
+/* - - it looked bad with the dark text - - */
+
+header, footer, main, section, p, h1, h2, h3, h4, small {
+    color: var(--white);
+  }
 
 
 /* ----- CHECK FOR USER DARK MODE PREFERENCE ----- */
@@ -40,6 +45,8 @@ button, input, select textarea { font: inherit; }
 @media (prefers-color-scheme: dark) {
     body { background-color: var(--dark-gray); }
 }
+
+
 
 /* --------------- END USER PREFERS DARK COLOR SCHEME QUERY --------------- */
 
