--- a/EVA.styles.css
+++ b/EVA.styles.css
@@ -5,8 +5,8 @@
 *, *::before, *::after { box-sizing: border-box; }
 html, body, h1, h2, h3, h4, p, figure {margin: 0; padding: 0 }
 body { min-height: 100dvh; text-rendering: optimizeLegibility; -webkit-font-smoothing: antialiased; }
-img, picture { max-width: 100% display: block; }
-button, input, select textarea { font: inherit; }
+img, picture { max-width: 100%; display: block; }
+button, input, select, textarea { font: inherit; }
 
 /* -- /Reset-- */
 
@@ -48,6 +48,10 @@ button, input, select textarea { font: inherit; }
     .description.user_content small {
       color: var(--white);
     }
+
+    body, main, header, footer, section, p, li, small, h1, h2, h3, h4 {
+        color: var(--white);
+      }
   
     /* links inside that block (hit all states) */
     .description.user_content a,
@@ -182,7 +186,7 @@ img{
 
 /* ---------- SMALL SCREEN STYLES ---------- */
 /* --------------- BEGIN SMALL SCREEN SIZES --------------- */
-    @media (mind-width: 480px){
+    @media (min-width: 480px){
         header, footer{
         background-color: var(--lime-green);
         color: var(--dark-gray);
